--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
   <button id="submitButton" type="button">Ready for Interview</button><br>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <script src="form.js"></script>
 
   <!--
